# vibbles

./: .buildconfig  Makefile  README.md  main  meson.build  org.gnome.Vibbles.json
data/: meson.build  org.gnome.Vibbles.appdata.xml.in  org.gnome.Vibbles.desktop.in  org.gnome.Vibbles.gschema.xml
po/: POTFILES  meson.build
src/: main  main.vala  main.vala~  meson.build  vibbles.gresource.xml
